Updating about me

--- a/about-me/about.html
+++ b/about-me/about.html
@@ -36,7 +36,13 @@
           </p>
           <!-- The following text is visible for screen sizes > 615 pixels: -->
           <p id="full-view-text"></p>
-            Hello! I'm Nathan. I started college in 2017 when I was 16 thanks to a generous program called <a href="https://echs.beaverton.k12.or.us/">ECHS</a>. I graduated with a bachelor's in mathematics from <a href="https://www.pdx.edu/">PSU</a> in the Spring of 2021 with minors in physics and computer science. In the Fall of 2025, I graduated with a master's in computer science at PSU.<br><br>
+            Hello! I'm Nathan. I started college in 2017 when I was 16 thanks to a generous program called <a href="https://echs.beaverton.k12.or.us/">ECHS</a>. Since then, I've attained
+            <ul>
+              <li>Associates of Science</li>
+              <li>Bachelor's of Science in Mathematics</li>
+              <li>Master's of Science in Computer Science</li>
+              <li>Graduate Certificate of Cybersecurity</li>
+            </ul>
             My hobbies are running, basketball, chess.
           </p>
 
