Previous experience updated

--- a/previous-work/previous-work.html
+++ b/previous-work/previous-work.html
@@ -28,7 +28,7 @@
     <nav class ="navbar navbar-expand-md"></nav>
 
     <!-- Page title: -->
-    <h1 id="prev-work">Previous Work</h1>
+    <h1 id="prev-work">Work Experience</h1>
 
     <main class="page-content mt-5">
       <!-- Buttons using icons from Font Awesome: -->
@@ -53,12 +53,12 @@
           <span>My Resume</span>
         </button>
       
-        <button type="button" class="btn btn-info btn-fixed">
+        <button id="github" type="button" class="btn btn-info btn-fixed">
           <i class="fab fa-lg fa-github"></i>
           <span>My GitHub</span>
         </button>
       
-        <button type="button" class="btn btn-info btn-fixed">
+        <button id="linkedin" type="button" class="btn btn-info btn-fixed">
           <i class="fab fa-lg fa-linkedin"></i>
           <span>My LinkedIn</span>
         </button>
